# qtdlib

./: .gitmodules  CMakeLists.txt
qtdlib/: CMakeLists.txt
qtdlib/auth/: qtdauthcode.cpp  qtdauthcode.h  qtdauthmanager.cpp  qtdauthmanager.h  qtdauthparams.cpp  qtdauthparams.h  qtdauthstate.h  qtdauthstatefactory.h
qtdlib/auth/requests/: qtdauthparametersresponse.cpp  qtdauthparametersresponse.h
qtdlib/chat/: qtdbasicgroupchat.cpp  qtdbasicgroupchat.h  qtdchat.cpp  qtdchat.h  qtdchataction.cpp  qtdchataction.h  qtdchatactionfactory.cpp  qtdchatactionfactory.h  qtdchatlistmodel.cpp  qtdchatlistmodel.h  qtdchatlistsortfiltermodel.cpp  qtdchatlistsortfiltermodel.h  qtdchatmember.cpp  qtdchatmember.h  qtdchatmemberstatus.cpp  qtdchatmemberstatus.h  qtdchattype.cpp  qtdchattype.h  qtdchattypefactory.h  qtdsecretchat.cpp  qtdsecretchat.h  qtdsecretchatstate.cpp  qtdsecretchatstate.h  qtdsupergroupchat.cpp  qtdsupergroupchat.h
qtdlib/chat/requests/: qtdclosechatrequest.h  qtdgetbasicgrouprequest.h  qtdgetsecretchatrequest.h  qtdgetsupergroupfullinforequest.cpp  qtdgetsupergroupfullinforequest.h  qtdopenchatrequest.h  qtdreportchatrequest.h  qtdsetchattitlerequest.cpp  qtdsetchattitlerequest.h  qtdsetpinnedchatsrequest.cpp  qtdsetpinnedchatsrequest.h
qtdlib/client/: qtdclient.cpp  qtdclient.h  qtdhandle.h  qtdthread.h
qtdlib/common/: qabstractint32id.cpp  qabstractint32id.h  qabstractint53id.cpp  qabstractint53id.h  qabstractint64id.cpp  qabstractint64id.h  qabstracttdobject.cpp  qabstracttdobject.h  qtdint.h  qtdrequest.cpp  qtdrequest.h
qtdlib/connections/: qtdconnectionstate.cpp  qtdconnectionstate.h  qtdconnectionstatefactory.h
qtdlib/files/: qtdanimation.cpp  qtdanimation.h  qtdaudio.cpp  qtdaudio.h  qtddocument.cpp  qtddocument.h  qtddownloadfilerequest.h  qtdfile.cpp  qtdfile.h  qtdlocalfile.cpp  qtdlocalfile.h  qtdphoto.cpp  qtdphoto.h  qtdphotos.cpp  qtdphotos.h  qtdphotosize.cpp  qtdphotosize.h  qtdremotefile.cpp  qtdremotefile.h  qtdsticker.cpp  qtdsticker.h
qtdlib/messages/: qtdformattedtext.cpp  qtdformattedtext.h  qtdmessage.cpp  qtdmessage.h  qtdmessagecontent.cpp  qtdmessagecontent.h  qtdmessagecontentfactory.cpp  qtdmessagecontentfactory.h  qtdmessagelistmodel.cpp  qtdmessagelistmodel.h  qtdmessagesendingstate.cpp  qtdmessagesendingstate.h  qtdtextentity.cpp  qtdtextentity.h  qtdtextentitytype.cpp  qtdtextentitytype.h  qtdwebpage.cpp  qtdwebpage.h
qtdlib/models/: QmlObjectListModel.h
qtdlib/notifications/: qtdnotificationsettings.cpp  qtdnotificationsettings.h
qtdlib/quick/: plugin.cpp  plugin.h  users.cpp  users.h
qtdlib/user/: qtdlinkstate.cpp  qtdlinkstate.h  qtdlinkstatefactory.h  qtdprofilephoto.h  qtduser.cpp  qtduser.h  qtdusers.cpp  qtdusers.h  qtduserstatus.cpp  qtduserstatus.h  qtduserstatusfactory.cpp  qtduserstatusfactory.h  qtdusertype.cpp  qtdusertype.h
qtdlib/user/requests/: qtdblockuserrequest.h
qtdlib/utils/: qtdtextformatter.cpp  qtdtextformatter.h
